# new

./: .air.toml  .gitignore  COMPLETION_CONFIRMATION.txt  COMPLETION_SUMMARY.md  Cursor.js  DEPENDENCIES.md  DOCUMENTATION_INDEX.md  Engine.js  FINAL_VALIDATION_REPORT.md  GETTING_STARTED.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_STATUS.md  Makefile  QUICKSTART.md  QUICK_ACCESS.txt  README.md  README_COMPLETION.md  REVIEW_COMPLETE.md  SOVEREIGN_MASTER_GUIDE.md  SYSTEM_REVIEW_MAY_1.md  Tower.js  chat-simple.html  chat-simple.js  chat.css  chat.html  chat.js  cursor.css  docker-compose.override.yml  docker-compose.simple.yml  docker-compose.yml  finance.js  go.mod  go.sum  index.html  launch.sh  login.css  login.js  requirements.txt  settings.css  settings.js  (+2 more)
cpp/: CMakeLists.txt  CMakeLists_wasm.txt
cpp/bench/: bench_inference.cpp
cpp/engine/: titan_engine.cpp  titan_engine.h
cpp/finance/: Makefile  finance_engine.cpp  fundamentals.hpp  patterns.hpp  test_engine.cpp  types.hpp
cpp/include/: titan.h
cpp/neural/: sovereign_neural_config.hpp  sovereign_neural_layers.hpp  sovereign_neural_prime.hpp  sovereign_neural_tokenizer.hpp  sovereign_neural_transformer.hpp
cpp/scripts/: build.sh
cpp/src/: context_manager.cpp  expression_parser.cpp  inference_queue.cpp  inference_queue.hpp  neural_engine.cpp  simd_utils.h  symbolic_engine.cpp  titan.cpp
cpp/tests/: test_queue.cpp
deploy/: Dockerfile  prometheus.yml
docs/: README.md
internal/: bench_test.go
math_solver/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  server.py  solve.py  solver.py
math_solver/classifier/: train.py
math_solver/core/: __init__.py  classifier.py  geometry.py  numeric.py  orchestrator.py  processor.py  symbolic.py
math_solver/data/: download_datasets.py  generate_training_data.py  prepare_training_data.py  synthetic_generator.py
math_solver/tests/: test_data.py  test_solver.py  test_solvers.py
papiai_foundation_model/: README.md  dataset.py  global_math_solver.py  global_physics_solver.py  hybrid_ai_pipeline.py  inference.py  math_of_ai.py  model.py  sovereign_ai_master.py  synthetic_data_generator.py  train.py  unified_science_solver.py
papiai_training_core/: README.md  requirements.txt  run_papiai.py  train_papiai.py
scripts/: build_wasm.sh  distributed_train.py  download_datasets.py  eval.py  finetune.py  launch.sh  simulate_fleet.sh
web/: DESIGN_SYSTEM.md  README.md  admin.html  chat.html  chat.js  command-center.html  index-pro.html  index.html  package.json  (+6 more)
(+256 files in other folders)
