[tool.poetry]
name = "sovereign-math-solver"
version = "1.0.0"
description = "Symbolic math engine for Sovereign Intelligence Core"
authors = ["Sovereign Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sympy = "^1.12"
numpy = "^1.26.3"
scipy = "^1.12.0"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
